--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,11 @@
-
 buildscript {
     repositories {
+        google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.4'
+        classpath 'com.android.tools.build:gradle:3.5.3'
     }
 }
 
@@ -27,7 +27,19 @@ android {
 }
 
 repositories {
-    mavenCentral()
+    mavenLocal()
+    maven {
+        // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+        url("$rootDir/../node_modules/react-native/android")
+    }
+    maven {
+        // Android JSC is installed from npm
+        url("$rootDir/../node_modules/jsc-android/dist")
+    }
+
+    google()
+    jcenter()
+    maven { url 'https://www.jitpack.io' }
 }
 
 dependencies {
